garbage collector switches